--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.2.1",
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
@@ -17,7 +18,8 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-screens": "^2.10.1",
     "react-native-web": "~0.13.12",
-    "react-navigation": "^3.11.1"
+    "react-navigation": "^3.11.1",
+    "react-navigation-header-buttons": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
