--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-paper": "^4.2.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-screens": "^2.10.1",
     "react-native-web": "~0.13.12",
     "react-navigation": "^3.11.1",
-    "react-navigation-header-buttons": "^5.0.2"
+    "react-navigation-header-buttons": "^5.0.2",
+    "react-navigation-material-bottom-tabs": "^2.3.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
